# cloud

./: LICENSE  README.md
app/: LICENSE  app.cabal
app/app/: Main.hs
app/src/: CalcProcess.hs  CmdArgs.hs  Message.hs  NodeList.hs  Random.hs  SenderProcess.hs
app/test/: Spec.hs
