name:                app
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/paulrzcz/cloud
license:             BSD3
license-file:        LICENSE
author:              Pavel Ryzhov
maintainer:          paul@paulrz.cz
copyright:           Velrina s.r.o.
category:            experimental
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     CmdArgs,
                       Message,
                       Random,
                       SenderProcess,
                       CalcProcess,
                       NodeList
  build-depends:       base >= 4.7 && < 5,
                       hspec,
                       QuickCheck,
                       semigroups,
                       checkers,
                       transformers,
                       monad-logger,
                       text,
                       distributed-process,
                       distributed-process-extras,
                       cmdargs,
                       binary,
                       mersenne-random-pure64,
                       network,
                       network-transport,
                       bytestring,
                       syb,
                       deepseq

executable app
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5,
                       app,
                       distributed-process,
                       monad-logger,
                       text,
                       mersenne-random-pure64,
                       network-transport-tcp,
                       transformers

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       app,
                       hspec,
                       QuickCheck,
                       semigroups,
                       checkers,
                       transformers,
                       monad-logger,
                       text,
                       distributed-process

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
